# fletbatteries

./: README.md  backend.py  fletmain.py  main.py  pyproject.toml  requirements.txt  template.db  tiny_editor.py
assets/: editor.html  editor1.html
assets/js/: editor_custom.js
components/: tinymce_widget.py
forms/: two_forms_demo.py
src/: main.py
src/assets/animations/: tree-animation.riv
src/assets/fontawesome/: fontawesome.py  generate_fontawesome.py
src/components/layout/: footer.py  layout.py  sidebar.py
src/components/shared/: autocompletes_related.py  calendar.py  charts.py  datatable.py  draggableModal.py  form.py  form_example.json  formset.py  generic_card.py  generic_card_crud.py  inputs.py  loader.py  modals.py  prueba.py  rotating_boxes_loader.py  selects.py
src/controls/: serializer.py  utils.py
src/controls/country/: country_control.py
src/controls/customer/: customer_control.py
src/controls/person/: person_control.py
src/controls/product/: product_control.py
src/controls/router/: router.py  views.py
src/controls/user/: user_control.py
src/data/manager/: abc_manager.py  calendar_event_manager.py  community_manager.py  country_manager.py  customer_manager.py  db_manager.py  (+4 more)
src/scripts/: api.py  crud_router.py  init_db.py
src/views/: animation_view.py  autocompletes_related_view.py  autocompletes_view.py  calendar_view.py  charts_view.py  customer_view.py  fontawesome_view.py  friconix_view.py  modals.py  product_view.py  profile_view.py  select_with_image_view.py  spinner.py  spinner_view.py  test_view.py  user_view.py
(+14 files in other folders)
