[project]
name = "FletBatteries"
version = "0.0.1"
description = "FletBatteries is a set of framework-like tools designed to simplify the development of applications with Flet."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Solvo", email = "info@solvosoft.com" },
]
dependencies = [
    "flet",
    "sqlmodel",
    "pydantic>=1.10.0",
    "pydantic-settings>=0.1.0",
    "python-dotenv",
]

[tool.flet]
org = "https://solvosoft.com/es/"
product = "FletBatteries"
company = "Solvo"
copyright = "Copyright (C) 2025 by Solvo"

[tool.flet.app]
# ruta al directorio donde está main.py
path = "./src/main.py"
name = "FletBatteries"
icon = "./assets/image/icon.png"
[tool.poetry]
name = "fletbatteries"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
